# rescribe-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  rescribe.py
