[tool.poetry]
name = "rescribe-cli"
version = "0.1.0"
description = "Windows system tray application for speech-to-text using Whisper"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "rescribe"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "^2.0.0", source = "pytorch"}
torchaudio = {version = "^2.0.0", source = "pytorch"}
transformers = "^4.48.3"
pyaudio = "^0.2.14"
keyboard = "^0.13.5"
pyperclip = "^1.9.0"
pystray = "^0.19.5"
pillow = "^11.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 